cmake_minimum_required(VERSION 3.19)
project(Tarea_III_Datos_II)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tarea_III_Datos_II main.cpp ParityChecking/ParityCheckingVRC.cpp ParityChecking/ParityCheckingVRC.h ParityChecking/ParityCheckingLRC.cpp ParityChecking/ParityCheckingLRC.h ParityChecking/CheckSum.cpp ParityChecking/CheckSum.h)